--- a/contrib/__wm/team.html
+++ b/contrib/__wm/team.html
@@ -1,5 +1,10 @@
-<div class="ui teamlist segment">
-<!--  <button title="New member" class="ui attached mini add member button">
-    <i class="mini add icon"></i>
-  </button> -->
-</div>
+  <div class="ui function form" style="margin-top: 1em">
+    <div class="fields">
+      <div class="two wide function field">
+        <h1 style="text-align: center">Team</h1>
+      </div>
+      <div class="twelve wide teamlist function field">
+      include "member.html"
+    </div>
+  </div>
+  </div>
