add open details indicator

--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -80,7 +80,7 @@
       <p id="progress">XHR2's upload progress isn't supported</p>
     </div>
     <progress class="hidden" id="uploadprogress" min="0" max="100" value="0">0</progress>
-    <div class="ui inverted tiny selected menu" style="margin: 2px">
+    <div class="ui tiny selected menu" style="margin: 2px">
       <div class="ui red selected label" style="margin-left: 4px; width: 3em; text-align: center">0</div>
       <a class="selectall item">
         <i class="checkmark icon"></i>
