--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -28,7 +28,7 @@
   include "iframe-contents.html"
 </div>
 <div class="ui left treemap sidebar">
-  <div id="treemap"></div>
+  <div id="treemap" style="width: 100%; height: 98%"></div>
 </div>
 <div class="ui content">
   <div class="main fluid ui buttons">
