use sun for search

--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -38,7 +38,7 @@
     </button>
 
    <button title="Search" class="ui scrape toggle attached button">
-     <i class="large sitemap icon"></i>
+     <i class="large sun icon"></i>
    </button>
 
    <button title="Team" class="ui team toggle attached button">
