--- a/contrib/__wm/iframe-contents.html
+++ b/contrib/__wm/iframe-contents.html
@@ -1,32 +1,34 @@
 <div id="annotateBar" style="background: #ddd">
   <div id="annotateEditor" class="ui form" style="padding: 4px">
-    <div class="inline annotation edit two fields">
-      <label for="annoType">Type</label>
-      <select id="annoType"><option selected>category</option></select>
+    <div class="field">
+      <span id="annotatedAt"></span>
       <span class="annotation children" style="display: none">
         <i class="triangle right icon"></i><span class="count">9</span>
       </span>
     </div>
-    <div class="annotation edit field">
-      <label for="annoValue">Value</label>
-      <input name="annoValue" id="annoValue" style="width: 100%" />
+    <div class="annotation edit inline field">
+      <div class="ui left labeled icon input">
+        <i class="pencil icon"></i>
+        <input name="annoValue" id="annoValue" />
+         <div class="ui corner label">
+          <i class="filter value icon"></i>
+        </div>
+      </div>
     </div>
-    <div class="field">
-      <div class="three ui buttons" style="float: left">
-        <div class="mini ui button"><i class="green checked checkbox icon"></i></div>
-        <div class="mini ui button"><i class="yellow empty checkbox icon"></i></div>
-        <div class="mini ui button"><i class="red eraser icon"></i></div>
+    <div class="annotation edit inline field">
+      <div class="ui left labeled icon input">
+        <i class="user icon"></i>
+        <input disabled name="annoBy" id="annoBy" />
+         <div class="ui corner label">
+          <i class="filter by icon"></i>
+        </div>
       </div>
-      <div class="two ui buttons" style="float: right">
-        <div class="mini ui button"><i class="info icon"></i></div>
-        <div class="mini ui button"><i class="filter icon"></i></div>
-      </div>
-      <br style="clear: both" />
     </div>
   </div>
   <div class="ui form" style="background: #ffe; padding: 4px; padding-bottom: 0px">
     <div class="inline field">
-      <label for="treeFilter">Filter</label>
+      
+      <label for="treeFilter">Filter (<span id="annotationCount"><img src="<!-- @var HOMEPAGE -->__wm/loading.gif" alt="loading results" /></span>)</label>
       <input id="treeFilter">
     </div>
     <div id="treeContainer" style="font-size: 80%; overflow: auto; padding: 4px">
