move search schedule to a button

--- a/contrib/__wm/iframe-contents.html
+++ b/contrib/__wm/iframe-contents.html
@@ -1,4 +1,4 @@
-<div id="annotateBar" style="background: #ddd">
+<div id="annotateBar" style="background: white">
   <div id="annotateEditor" class="ui form" style="padding: 4px">
     <div class="field">
       <span id="annotatedAt"></span>
