--- a/contrib/__wm/scrape.html
+++ b/contrib/__wm/scrape.html
@@ -36,9 +36,7 @@
         <input name="scrapeName" />  <button class="ui mini button"><i class="save icon"></i></button>
       </div>
       <div class="field">
-        <label for="scanEvery">Scan every</label>
-        <input id="scanEvery" disabled class="xspinner" value="once only" size="8" title="when to recheck starting points"> 
-        <select disabled style="width: 8em"><option>hours</option><option>days</option></select>
+        <button disabled class="ui mini schedule search button"><i class="time icon"></i></button> <span id="searchSchedule">unscheduled</span>
       </div>
     </div>
     <div class="two wide function field">
