more menu tweaking

--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -51,7 +51,7 @@
 
     <progress class="hidden" id="uploadprogress" min="0" max="100" value="0">0</progress>
 
-    <div class="ui selected mini menu" style="margin: 2px">
+    <div class="ui grey mini menu" style="margin: 2px">
       <a title="Team" class="ui team toggle item">
         <i class="users icon"></i>
       </a>
@@ -69,7 +69,7 @@
         </div>
       </div>
       <div class="item">
-        <div class="ui red selected label" style="margin-left: 9px; margin-right: 9px">0</div>
+        <div class="ui red selected label">0</div>
       </div>
       <a class="select all item">
         <i class="checkmark icon"></i>
@@ -83,7 +83,7 @@
       <a class="disabled delete requires selected item">
         <i class="trash icon"></i> 
       </a>
-      <a class="grey details toggle item">
+      <a class="details toggle item">
         <i class="edit icon"></i> 
       </a>
       <a class="graph item">
